<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fabflix.moviequiz.MainActivity"
    android:background="@android:color/black"
    android:orientation="vertical">

    <TextView
        android:text="Quiz Stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="30dp"/>

    <TextView
        android:text="@string/stats_question_count"
        android:id="@+id/single_textViewAnswered"
        style="@style/default_white_text.left"
        />

    <TextView
        android:text="@string/stats_question_correct"
        android:id="@+id/single_textViewCorrect"
        style="@style/default_white_text.left"
        />

    <TextView
        android:text="@string/stats_question_incorrect"
        android:id="@+id/single_textViewWrong"
        style="@style/default_white_text.left"
        />

    <TextView
        android:text="@string/stats_question_avg_resp"
        android:id="@+id/single_textViewAvgResponse"
        style="@style/default_white_text.left"
        />

    <Button
        android:text="@string/done"
        android:id="@+id/single_buttonFinish"
        style="@style/button_defaults"
        />

</LinearLayout>
