<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fabflix.moviequiz.MainActivity"
    android:orientation="vertical">

    <TextView
        android:text="Question #1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:textColor="@android:color/darker_gray"
        android:id="@+id/textViewQuestionNumber"
        android:layout_marginTop="5dp"/>

    <TextView
        android:text="@string/sample_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textColor="@android:color/white"
        android:id="@+id/textViewQuestion"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/answer1"
        android:text="@string/sample_answer1"
        style="@style/button_defaults"
        />


    <Button
        android:id="@+id/answer2"
        android:text="@string/sample_answer2"
        style="@style/button_defaults"
        />


    <Button
        android:id="@+id/answer3"
        android:text="@string/sample_answer3"
        style="@style/button_defaults"
        />


    <Button
        android:id="@+id/answer4"
        android:text="@string/sample_answer4"
        style="@style/button_correct"
        />


    <!-- TextView
        android:text="@string/correct"
        android:id="@+id/response_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginTop="30dp"/-->


</LinearLayout>
