<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fabflix.moviequiz.MainActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="50dp"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/take_quiz"
        android:text="@string/take_quiz"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/see_stats"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/see_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>
